# orbit

./: .gitignore  AGENTS.md  CHANGELOG.md  CHECKPOINT.md  LICENSE  README.md  RESUME.md  VALIDATION.md  state.json
.github/workflows/: ci.yml  release.yml
electron-app/: electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.json
electron-app/src/: App.css  App.tsx  catalog.ts  contracts.ts  desktopShell.ts  ipc.ts  serviceHost.ts  storage.ts
installer/: Orbit.nsi  README.md  build_all.ps1  build_msi.ps1  build_msix.ps1  build_pyinstaller.ps1  install-orbit.ps1
project/: README.md  build_windows.bat  index.html  package-lock.json  package.json
project/src/: App.css  App.tsx  contracts.ts  desktopShell.ts  index.css  serviceHost.ts  storage.ts
project/src-tauri/: Cargo.toml  tauri.conf.json
project/src-tauri/capabilities/: main.json
project/src-tauri/icons/: icon.icns
project/src-tauri/src/: lib.rs  main.rs
pyside-app/: .gitignore  Orbit.spec  build.bat  build_onefile.bat  main.py  pytest.ini  requirements.txt
pyside-app/app/: adblocker.py  audit_log.py  biometric.py  brand_icons.py  catalog.py  clipboard_guard.py  cookie_bridge.py  dashboard.py  dialogs.py  encryption.py  focus_profiles.py  gist_sync.py  hover_effect.py  i18n.py  icons.py  importer.py  lock_screen.py  lottie_widget.py  models.py  notif_center.py  notif_history.py  onboarding.py  quiet_hours.py  reading_list.py  security_monitor.py  service_status.py  skeleton.py  slack_bridge.py  sounds.py  spinner.py  stats.py  storage.py  taskbar.py  theme.py  toast.py  (+5 more)
(+47 files in other folders)
