[package]
name = "octochat"
version = "0.1.0"
description = "OctoChat desktop shell"
authors = ["HDX"]
edition = "2021"

[lib]
name = "octochat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-ico", "unstable", "devtools"] }
tauri-plugin-notification = "2"
